--- a/res/layout/venue_checkin_activity.xml
+++ b/res/layout/venue_checkin_activity.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
+  android:orientation="vertical"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent">
 
-
   <TableLayout
     android:id="@+id/buttonBar"
-    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:layout_alignParentTop="true">
+    android:layout_width="fill_parent">
     <TableRow>
       <Button
         android:id="@+id/checkinButton"
@@ -24,17 +23,12 @@
         android:layout_weight="1"
         android:text="Shout" />
     </TableRow>
-
   </TableLayout>
 
   <WebView
     android:id="@+id/webView"
-    android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:layout_below="@id/buttonBar"
-    android:layout_alignBottom="@id/buttonBar"
-    android:layout_alignParentBottom="true"
-    android:layout_alignParentRight="true"
-    android:layout_alignParentLeft="true" />
+    android:layout_width="fill_parent"
+    android:background="#CCCCCC" />
 
-</RelativeLayout>
+</LinearLayout>
