--- a/res/layout/venue_activity.xml
+++ b/res/layout/venue_activity.xml
@@ -13,7 +13,7 @@
     <LinearLayout
       android:id="@+id/address"
       android:orientation="vertical"
-      android:layout_height="wrap_content"
+      android:layout_height="fill_parent"
       android:layout_width="fill_parent">
       <TabWidget
         android:id="@android:id/tabs"
