Support tweeting and silencing toggles.
committer: Joe LaPenna <joe@joelapenna.com>

--- a/res/layout/venue_checkin_activity.xml
+++ b/res/layout/venue_checkin_activity.xml
@@ -13,9 +13,29 @@
       <Button
         android:id="@+id/checkinButton"
         android:layout_height="wrap_content"
-        android:layout_width="0dip"
+        android:layout_width="0px"
         android:layout_weight="1"
         android:text="Check-in here" />
+    </TableRow>
+
+    <TableRow
+      android:paddingTop="16dip" >
+      <ToggleButton
+        android:id="@+id/silentToggle"
+        android:layout_height="wrap_content"
+        android:layout_width="0px"
+        android:layout_weight="1"
+        android:textOff="Broadcast Checkin?"
+        android:textOn="Broadcasting"
+        android:checked="false" />
+      <ToggleButton
+        android:id="@+id/twitterToggle"
+        android:layout_height="wrap_content"
+        android:layout_width="0px"
+        android:layout_weight="1"
+        android:textOff="Send Tweet?"
+        android:textOn="Tweeting"
+        android:checked="false" />
     </TableRow>
   </TableLayout>
 
