--- a/res/layout/venue_search_activity.xml
+++ b/res/layout/venue_search_activity.xml
@@ -18,4 +18,11 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" />
 
+  <TextView
+    android:id="@android:id/empty"
+    android:layout_height="fill_parent"
+    android:layout_width="fill_parent"
+    android:layout_gravity="center"
+    android:text="No results found. Try another search!" />
+
 </LinearLayout>
