+ Split FoursquareHttpApi and BaseHttpApi for cleanliness. + Implement basic search experience.
committer: Joe LaPenna <joe@joelapenna.com>

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -10,7 +10,7 @@
       android:persistent="true"
       android:key="phone"
       android:title="Phone"
-      android:hint="555 867 5309"
+      android:hint="5558675309"
       android:phoneNumber="true"
       android:singleLine="true" />
     <EditTextPreference
