--- a/res/layout/venue_list_item.xml
+++ b/res/layout/venue_list_item.xml
@@ -15,6 +15,7 @@
     android:id="@+id/locationLine1"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    android:layout_alignWithParentIfMissing="true"
     android:textAppearance="@android:style/TextAppearance.Small" />
   <TextView
     android:id="@+id/locationLine2"
