--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -5,19 +5,37 @@
   xmlns:android="http://schemas.android.com/apk/res/android">
 
   <PreferenceCategory
-    android:title="Foursquare">
+    android:title="Foursquare Credentials">
     <EditTextPreference
-      android:persistent="true"
       android:key="phone"
+      android:persistent="true"
       android:title="Phone"
       android:hint="5558675309"
       android:phoneNumber="true"
-      android:singleLine="true" />
+      android:singleLine="true"
+      android:summary="The phone number associated with your foursquare account." />
     <EditTextPreference
-      android:persistent="true"
       android:key="password"
+      android:persistent="true"
       android:title="Password"
       android:password="true"
       android:singleLine="true" />
   </PreferenceCategory>
+
+  <PreferenceCategory
+    android:title="Check-in Defaults">
+    <CheckBoxPreference
+      android:key="silent_checkin"
+      android:persistent="true"
+      android:title="Hide Checkins"
+      android:summaryOn="By default, hide checkins from other users."
+      android:summaryOff="By default, show checkins to other users." />
+    <CheckBoxPreference
+      android:key="twitter_checkin"
+      android:persistent="true"
+      android:title="Twitter Checkins"
+      android:summaryOn="By default, tweet your checkins."
+      android:summaryOff="By default, do not tweet your checkins." />
+  </PreferenceCategory>
+  
 </PreferenceScreen>
