--- a/res/layout/venue_search_activity.xml
+++ b/res/layout/venue_search_activity.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-  <!-- Copyright 2008 Joe LaPenna -->
+  <!-- Copyright 2009 Joe LaPenna -->
 
 <LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
@@ -14,9 +14,9 @@
 
   <TextView
     android:id="@android:id/empty"
-    android:layout_height="fill_parent"
-    android:layout_width="fill_parent"
-    android:layout_gravity="center"
+    android:layout_height="wrap_content"
+    android:layout_width="wrap_content"
+    android:layout_gravity="center|fill"
     android:text="No results found. Try another search!" />
 
 </LinearLayout>
