--- a/res/layout/venue_checkin_activity.xml
+++ b/res/layout/venue_checkin_activity.xml
@@ -15,7 +15,8 @@
         android:layout_height="wrap_content"
         android:layout_width="0px"
         android:layout_weight="1"
-        android:text="Check-in here" />
+        android:text="Check-in here"
+        android:textAppearance="@android:style/TextAppearance.Medium" />
     </TableRow>
 
     <TableRow>
