--- a/res/layout/venue_tips_activity.xml
+++ b/res/layout/venue_tips_activity.xml
@@ -37,6 +37,6 @@
     android:layout_height="fill_parent"
     android:layout_width="fill_parent"
     android:layout_gravity="center"
-    android:text="No tips found, Add one!" />
+    android:text="Searching for tips!" />
 
 </LinearLayout>
