--- a/res/layout/checkin_list_item.xml
+++ b/res/layout/checkin_list_item.xml
@@ -18,8 +18,6 @@
     android:layout_alignParentTop="true"
     android:layout_alignWithParentIfMissing="true"
 
-    android:textAppearance="@android:style/TextAppearance.Medium"
-
     android:gravity="center_vertical" />
 
   <TextView
@@ -33,8 +31,7 @@
     android:layout_alignParentRight="true"
     android:layout_below="@id/firstLine"
 
-    android:maxLines="3"
+    android:singleLine="true"
     android:ellipsize="marquee" />
-
 
 </RelativeLayout>
