+ Center empty element for list views, prettify checkin list items.
committer: Joe LaPenna <joe@joelapenna.com>

--- a/res/layout/checkin_list_item.xml
+++ b/res/layout/checkin_list_item.xml
@@ -18,6 +18,8 @@
     android:layout_alignParentTop="true"
     android:layout_alignWithParentIfMissing="true"
 
+    android:textAppearance="@android:style/TextAppearance.Large"
+
     android:gravity="center_vertical" />
 
   <TextView
@@ -30,6 +32,8 @@
     android:layout_alignParentLeft="true"
     android:layout_alignParentRight="true"
     android:layout_below="@id/firstLine"
+
+    android:textAppearance="@android:style/TextAppearance.Small"
 
     android:singleLine="true"
     android:ellipsize="marquee" />
