--- a/res/layout/venue_tips_activity.xml
+++ b/res/layout/venue_tips_activity.xml
@@ -36,7 +36,8 @@
     android:id="@android:id/empty"
     android:layout_height="fill_parent"
     android:layout_width="fill_parent"
-    android:layout_gravity="center"
+    android:layout_gravity="center|fill"
+    android:gravity="center"
     android:text="Searching for tips!" />
 
 </LinearLayout>
