+Add basic support for updating a checkin +enable better checkbox tracking for VenueTipsActivity
committer: Joe LaPenna <joe@joelapenna.com>

--- a/res/layout/tip_list_item.xml
+++ b/res/layout/tip_list_item.xml
@@ -14,9 +14,7 @@
 
     android:layout_alignParentTop="true"
     android:layout_alignParentBottom="true"
-    android:layout_marginRight="6dip"
-
-    android:enabled="false" />
+    android:layout_marginRight="6dip" />
 
   <TextView
     android:id="@+id/firstLine"
