--- a/res/layout/venue_search_activity.xml
+++ b/res/layout/venue_search_activity.xml
@@ -6,18 +6,38 @@
   android:orientation="vertical"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent">
-
-  <ListView
-    android:id="@android:id/list"
+  <TabHost
+    android:id="@android:id/tabhost"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" />
-
-  <TextView
-    android:id="@android:id/empty"
     android:layout_height="fill_parent"
-    android:layout_width="fill_parent"
-    android:layout_gravity="center|fill"
-    android:gravity="center"
-    android:text="Searching for venues!" />
-
+    android:layout_below="@+id/venueLocationLine2"
+    android:paddingTop="10dip">
+    <TabWidget
+      android:id="@android:id/tabs"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content" />
+    <FrameLayout
+      android:id="@android:id/tabcontent"
+      android:layout_width="fill_parent"
+      android:layout_height="fill_parent"
+      android:paddingTop="65px">
+      <LinearLayout
+        android:id="@+id/listviewLayout"
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <ListView
+          android:id="@+id/list"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent" />
+        <TextView
+          android:id="@+id/empty"
+          android:layout_height="fill_parent"
+          android:layout_width="fill_parent"
+          android:layout_gravity="center|fill"
+          android:gravity="center"
+          android:text="Searching for venues!" />
+      </LinearLayout>
+    </FrameLayout>
+  </TabHost>
 </LinearLayout>
