-Update debug google maps api key
committer: Joe LaPenna <joe@joelapenna.com>

--- a/res/values/credentials.xml
+++ b/res/values/credentials.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string
-    name="google_maps_api_key">0RKYBEQTAi6NEKnd4A_jdnRIYgbcQJTV_3gnBOQ</string>
+    <string name="google_maps_api_key">0RKYBEQTAi6OfIPQuU_kOX8_8FPzqBTpj74q3QQ</string>
 </resources>
