--- a/res/layout/venue_list_item.xml
+++ b/res/layout/venue_list_item.xml
@@ -1,26 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
+<RelativeLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
-  android:orientation="vertical"
   android:layout_width="fill_parent"
-  android:layout_height="?android:attr/listPreferredItemHeight">
+  android:layout_height="?android:attr/listPreferredItemHeight"
+  android:padding="6dip">
+
+  <ImageView
+    android:id="@+id/icon"
+
+    android:layout_width="wrap_content"
+    android:layout_height="fill_parent"
+
+    android:layout_alignParentTop="true"
+    android:layout_alignParentBottom="true"
+    android:layout_marginRight="6dip"
+
+    android:src="@drawable/reddot" />
 
   <TextView
-    android:id="@+id/name"
+    android:id="@+id/line1"
+
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:textAppearance="@android:style/TextAppearance.Large" />
-  <TextView
-    android:id="@+id/locationLine1"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
+
+    android:layout_toRightOf="@id/icon"
+    android:layout_alignParentRight="true"
+    android:layout_alignParentTop="true"
     android:layout_alignWithParentIfMissing="true"
-    android:textAppearance="@android:style/TextAppearance.Small" />
+
+    android:gravity="center_vertical"
+    android:textAppearance="@android:style/TextAppearance.Medium"
+    android:singleLine="true" />
+
   <TextView
-    android:id="@+id/locationLine2"
+    android:id="@+id/line2"
+
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:textAppearance="@android:style/TextAppearance.Small" />
 
-</LinearLayout>
+    android:layout_toRightOf="@id/icon"
+    android:layout_below="@id/line1"
+    android:layout_alignParentRight="true"
+    android:layout_alignWithParentIfMissing="true"
+
+    android:gravity="center_vertical"
+    android:textAppearance="@android:style/TextAppearance.Small"
+    android:singleLine="true" />
+
+  <TextView
+    android:id="@+id/line3"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+
+    android:layout_toRightOf="@id/icon"
+    android:layout_below="@id/line2"
+    android:layout_alignParentRight="true"
+    android:layout_alignParentBottom="true"
+    android:layout_alignWithParentIfMissing="true"
+
+    android:gravity="center_vertical"
+    android:textAppearance="@android:style/TextAppearance.Small"
+    android:singleLine="true" />
+
+</RelativeLayout>
