Reset oauth token before doing an authexchange in preferences. Refactor to support it.
committer: Joe LaPenna <joe@joelapenna.com>

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -7,21 +7,24 @@
   <PreferenceScreen
     android:key="credentials_screen"
     android:title="Foursquare Credentials">
-    <EditTextPreference
-      android:key="phone"
-      android:persistent="true"
-      android:title="Phone Number"
-      android:hint="5558675309"
-      android:phoneNumber="true"
-      android:singleLine="true"
-      android:summary="Your Foursquare phone number, without country code or punctuation." />
-    <EditTextPreference
-      android:key="password"
-      android:persistent="true"
-      android:title="Password"
-      android:password="true"
-      android:singleLine="true"
-      android:summary="Your Foursquare password." />
+    <PreferenceCategory
+      android:title="Foursquare Credentials">
+      <EditTextPreference
+        android:key="phone"
+        android:persistent="true"
+        android:title="Phone Number"
+        android:hint="5558675309"
+        android:phoneNumber="true"
+        android:singleLine="true"
+        android:summary="Your Foursquare phone number, without country code or punctuation." />
+      <EditTextPreference
+        android:key="password"
+        android:persistent="true"
+        android:title="Password"
+        android:password="true"
+        android:singleLine="true"
+        android:summary="Your Foursquare password." />
+    </PreferenceCategory>
   </PreferenceScreen>
 
   <PreferenceCategory
