Integrate UserActivity into SearchVenueActivity provide cool Badge dialog.
committer: Joe LaPenna <joe@joelapenna.com>

--- a/res/layout/user_activity.xml
+++ b/res/layout/user_activity.xml
@@ -17,9 +17,7 @@
     android:layout_alignParentLeft="true"
     android:layout_marginRight="6dip"
 
-    android:scaleType="fitXY"
-
-    android:src="@drawable/blank_boy" />
+    android:scaleType="fitXY" />
 
   <TextView
     android:id="@+id/name"
