Disable UI elements when a venue is not loaded in the venue activity.
committer: Joe LaPenna <joe@joelapenna.com>

--- a/res/layout/venue_tips_activity.xml
+++ b/res/layout/venue_tips_activity.xml
@@ -12,6 +12,7 @@
     <TableRow>
       <Button
         android:id="@+id/tipButton"
+        android:enabled="false"
         android:layout_height="wrap_content"
         android:layout_width="0px"
         android:layout_weight="1"
@@ -19,6 +20,7 @@
         android:textAppearance="@android:style/TextAppearance.Medium" />
       <Button
         android:id="@+id/todoButton"
+        android:enabled="false"
         android:layout_height="wrap_content"
         android:layout_width="0px"
         android:layout_weight="1"
