Add extra maps button on venue map activity, remove unused yelp activity.
committer: Joe LaPenna <joe@joelapenna.com>

--- a/res/layout/venue_map_activity.xml
+++ b/res/layout/venue_map_activity.xml
@@ -12,11 +12,21 @@
     android:clickable="true" />
 
   <Button
-    android:id="@+id/yelpButton"
+    android:id="@+id/mapsButton"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignParentBottom="true"
     android:layout_alignParentRight="true"
+    android:paddingTop="10dip"
+    android:paddingBottom="10dip"
+    android:text="Maps" />
+
+  <Button
+    android:id="@+id/yelpButton"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignParentBottom="true"
+    android:layout_toLeftOf="@id/mapsButton"
     android:paddingTop="10dip"
     android:paddingBottom="10dip"
     android:text="yelp!" />
