Format some dates in the style of "two hours ago"
committer: Joe LaPenna <joe@joelapenna.com>

--- a/res/layout/checkin_list_item.xml
+++ b/res/layout/checkin_list_item.xml
@@ -32,6 +32,8 @@
     android:layout_alignParentRight="true"
     android:layout_below="@id/firstLine"
 
+    android:paddingRight="6dip"
+
     android:gravity="right"
     android:textAppearance="@android:style/TextAppearance.Small"
     android:textStyle="italic"
