--- a/res/layout/tip_list_item.xml
+++ b/res/layout/tip_list_item.xml
@@ -51,6 +51,8 @@
     android:layout_alignWithParentIfMissing="true"
     android:layout_below="@id/firstLine"
 
+    android:paddingRight="6dip"
+
     android:gravity="right"
     android:textAppearance="@android:style/TextAppearance.Small"
     android:textStyle="italic"
