--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -30,13 +30,15 @@
       android:persistent="true"
       android:title="Share Checkins"
       android:summaryOn="By default, show checkins to other users."
-      android:summaryOff="By default, hide checkins to other users." />
+      android:summaryOff="By default, hide checkins to other users." 
+      android:defaultValue="true" />
     <CheckBoxPreference
       android:key="twitter_checkin"
       android:persistent="true"
       android:title="Twitter Checkins"
       android:summaryOn="By default, tweet your checkins."
-      android:summaryOff="By default, do not tweet your checkins." />
+      android:summaryOff="By default, do not tweet your checkins."
+      android:defaultValue="false" />
   </PreferenceCategory>
 
 </PreferenceScreen>
