--- a/res/layout/venue_list_item.xml
+++ b/res/layout/venue_list_item.xml
@@ -7,18 +7,18 @@
   android:layout_height="?android:attr/listPreferredItemHeight">
 
   <TextView
-    android:id="@+id/name"
+    android:id="@+id/venueName"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:textAppearance="@android:style/TextAppearance.Large" />
   <TextView
-    android:id="@+id/locationLine1"
+    android:id="@+id/venueLocationLine1"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_alignWithParentIfMissing="true"
     android:textAppearance="@android:style/TextAppearance.Small" />
   <TextView
-    android:id="@+id/locationLine2"
+    android:id="@+id/venueLocationLine2"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:textAppearance="@android:style/TextAppearance.Small" />
