Disable "completing" a tip because there is no way to tell if a tip has been completed, via the API.
committer: Joe LaPenna <joe@joelapenna.com>

--- a/res/layout/tip_list_item.xml
+++ b/res/layout/tip_list_item.xml
@@ -20,6 +20,8 @@
     android:layout_alignParentBottom="true"
     android:layout_marginRight="6dip"
 
+    android:visibility="gone"
+
     android:clickable="false"
     android:focusable="false" />
 
