--- a/main/res/layout/tip_activity.xml
+++ b/main/res/layout/tip_activity.xml
@@ -6,4 +6,10 @@
   android:orientation="vertical"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent">
+  <include
+    layout="@layout/venue_list_item" />
+  <TextView
+    android:id="@+id/textView"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content" />
 </LinearLayout>
