--- a/main/res/layout/venue_map_activity.xml
+++ b/main/res/layout/venue_map_activity.xml
@@ -15,7 +15,7 @@
     android:id="@+id/mapsButton"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_alignParentBottom="true"
+    android:layout_alignParentTop="true"
     android:layout_alignParentRight="true"
     android:paddingTop="10dip"
     android:paddingBottom="10dip"
@@ -26,6 +26,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignParentBottom="true"
+    android:layout_alignParentRight="true"
     android:layout_toLeftOf="@id/mapsButton"
     android:paddingTop="10dip"
     android:paddingBottom="10dip"
