--- a/main/res/layout/venue_checkin_activity.xml
+++ b/main/res/layout/venue_checkin_activity.xml
@@ -9,12 +9,10 @@
     android:layout_height="fill_parent"
     android:layout_width="fill_parent" />
 
-  <TextView
+  <include
     android:id="@android:id/empty"
-    android:layout_height="fill_parent"
+    layout="@layout/empty_loading"
     android:layout_width="fill_parent"
-    android:layout_gravity="center|fill"
-    android:gravity="center"
-    android:text="Searching for recent checkins." />
+    android:layout_height="fill_parent" />
 
 </LinearLayout>
