--- a/main/res/layout/main_activity.xml
+++ b/main/res/layout/main_activity.xml
@@ -6,7 +6,7 @@
   android:orientation="vertical"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
-  android:background="@android:color/white">
+  android:background="@drawable/foursquare_gradient">
   <ImageView
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
