Stop logging in with PreferencesActivity, always shunt to MainActivity.
committer: Joe LaPenna <joe@joelapenna.com>

--- a/main/res/xml/preferences.xml
+++ b/main/res/xml/preferences.xml
@@ -5,25 +5,6 @@
   xmlns:android="http://schemas.android.com/apk/res/android">
 
   <PreferenceCategory
-    android:title="Foursquare Credentials">
-    <EditTextPreference
-      android:key="phone"
-      android:persistent="true"
-      android:title="Phone Number"
-      android:hint="5558675309"
-      android:phoneNumber="true"
-      android:singleLine="true"
-      android:summary="Your Foursquare phone number, without country code or punctuation." />
-    <EditTextPreference
-      android:key="password"
-      android:persistent="true"
-      android:title="Password"
-      android:password="true"
-      android:singleLine="true"
-      android:summary="Your Foursquare password." />
-  </PreferenceCategory>
-
-  <PreferenceCategory
     android:title="Check-in Defaults">
     <CheckBoxPreference
       android:key="share_checkin"
@@ -35,6 +16,7 @@
     <CheckBoxPreference
       android:key="twitter_checkin"
       android:persistent="true"
+      android:dependency="share_checkin"
       android:title="Twitter Checkins"
       android:summaryOn="By default, tweet your checkins."
       android:summaryOff="By default, do not tweet your checkins."
