--- a/main/res/layout/user_activity.xml
+++ b/main/res/layout/user_activity.xml
@@ -5,7 +5,7 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
-  android:padding="6dip">
+  android:padding="5dip">
 
   <ImageView
     android:id="@+id/photo"
@@ -54,6 +54,7 @@
     android:id="@+id/venueHeader"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="5dip"
 
     android:visibility="invisible"
 
